REOPENED147047
[iOS] Menu drop down such as on nike.com does not stay
https://bugs.webkit.org/show_bug.cgi?id=147047
Summary [iOS] Menu drop down such as on nike.com does not stay
alan
Reported 2015-07-17 13:54:40 PDT
1. Navigate to nike.com 2. Tap on the top menu bar: Men, Women, Boys etc.. 3. The pull down menu does not stay.
Attachments
Patch (3.23 KB, patch)
2015-07-17 19:17 PDT, alan
no flags
Patch (3.26 KB, patch)
2015-07-17 19:18 PDT, alan
no flags
Patch (3.17 KB, patch)
2015-07-21 14:20 PDT, alan
no flags
alan
Comment 1 2015-07-17 13:55:12 PDT
alan
Comment 2 2015-07-17 19:17:42 PDT
alan
Comment 3 2015-07-17 19:18:26 PDT
Simon Fraser (smfr)
Comment 4 2015-07-17 20:13:02 PDT
Comment on attachment 257015 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=257015&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:969 > + if (!oldUnobscuredContentRect.isEmpty() && oldUnobscuredContentRect.y() < 1) { oldUnobscuredContentRect.y() < 1 is true for RTL pages. Please test one.
alan
Comment 5 2015-07-18 21:33:40 PDT
(In reply to comment #4) > Comment on attachment 257015 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=257015&action=review > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:969 > > + if (!oldUnobscuredContentRect.isEmpty() && oldUnobscuredContentRect.y() < 1) { > > oldUnobscuredContentRect.y() < 1 is true for RTL pages. Please test one. Works fine on nike.com with body dir=rtl
Benjamin Poulain
Comment 6 2015-07-20 13:11:40 PDT
Comment on attachment 257015 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=257015&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:967 > + // FIXME: We need to support programmatic scroll-after-viewport update. I think this is no longer true. In RemoteLayerTreeDrawingAreaProxy::commitLayerTree(), didCommitLayerTree() is before requestScroll(). > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:974 > + [_scrollView zoomToRect: { newTopLeft, rectToZoomSize } animated:NO]; Can you double check that the zoom rect used here does not depend on the ContentInset of UIScrollView? Here we are only using the bounds.
alan
Comment 7 2015-07-21 14:20:56 PDT
alan
Comment 8 2015-07-21 14:21:34 PDT
(In reply to comment #6) > Comment on attachment 257015 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=257015&action=review > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:967 > > + // FIXME: We need to support programmatic scroll-after-viewport update. > > I think this is no longer true. In > RemoteLayerTreeDrawingAreaProxy::commitLayerTree(), didCommitLayerTree() is > before requestScroll(). > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:974 > > + [_scrollView zoomToRect: { newTopLeft, rectToZoomSize } animated:NO]; > > Can you double check that the zoom rect used here does not depend on the > ContentInset of UIScrollView? > > Here we are only using the bounds. Tested with landscape mode with the sidebar open.
WebKit Commit Bot
Comment 9 2015-07-21 15:37:16 PDT
Comment on attachment 257202 [details] Patch Clearing flags on attachment: 257202 Committed r187131: <http://trac.webkit.org/changeset/187131>
WebKit Commit Bot
Comment 10 2015-07-21 15:37:19 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 11 2015-08-10 13:32:47 PDT
Re-opened since this is blocked by bug 147839
Note You need to log in before you can comment on or make changes to this bug.